# Pynanzas

./: CHANGELOG.md  README.md  main.py  pyproject.toml  requirements.txt
notas/: Changelog.md  Data_example.xlsx  Funcionalidades.md  ideas.md  resumen_ideavim.md  roadmap.md  tasks.md
pynanzas/: __init__.py  analisis.py  cargar_data.py  cons.py  constants.py  data_loader.py  dicc.py  diccionario.py  export.py  limpiar_data.py  limpiar_datos.py  portafolio.py  producto.py  sql.py  version.py
pynanzas/duck/: con.py  definicion.py  dicc.py  esquemas.py  manipulacion.py
pynanzas/io/: cargar_data.py  export.py  limpiar_data.py
pynanzas/modelos/: portafolio.py  producto.py
pynanzas/sql/: __init__.py  base.py  consultas.py  definicion.py  diccionario.py  esquemas.py  manipulacion.py  movs.py  prods.py  sqlite.py
