[project]
name = "pynanzas"
version = "1.7.0"
description = "Análisis financiero personal con Python"
authors = [{ name = "TalesTales" }]

[tool.ruff]
line-length = 79
target-version = "py313"
fix = true
extend-include = ["*.ipynb"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.ruff.lint.isort]
force-sort-within-sections = true
known-first-party = ["pynanzas"]

[tool.basedpyright]
typeCheckingMode = "standard"
pythonVersion = "3.13"
include = ["."]
exclude = ["**/__pycache__", "**/node_modules", "**/.venv"]
reportMissingTypeStubs = false

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true

[tool.poetry]
name = "pynanzas"
version = "1.2.0"
description = "$description"
authors = ["TalesTales <servicios@pipebonilla.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13, <3.14"
pandas = "^2.3.1"
numpy = "^2.3.2"
pyxirr = "^0.10.7"
pandas-stubs = "^2.3.0.250703"
openpyxl = "^3.1.5"
overrides = "^7.7.0"
notebook = "^7.4.5"


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.7"
basedpyright = "^1.31.1"
pyright = "^1.1.403"
ipykernel = "^6.30.1"
ipython = "^9.4.0"
overrides = "^7.7.0"
commitizen = "^4.8.3"
notebook = "^7.4.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
